[package]
name = "graphql-tools"
version = "0.2.5"
edition = "2021"
description = "Tools for working with GraphQL in Rust, based on graphql-parser Document."
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["graphql", "tools", "gql", "validation", "ast"]
homepage = "https://github.com/dotansimha/graphql-tools-rs"
documentation = "https://github.com/dotansimha/graphql-tools-rs"
authors = ["Dotan Simha <dotansimha@gmail.com>"]

[dependencies]
graphql-parser = { git = 'https://github.com/sodiumjoe/graphql-parser', branch = "serde", features=["serde"] }
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.2.0"

[dev-dependencies]
graphql-parser = { git = 'https://github.com/sodiumjoe/graphql-parser', branch = "serde", features=["serde"] }
